[tool.poetry]
name = "task"
version = "0.1.0"
description = "poetry based fastapi application"
authors = ["KOLLURI MOUNISH <kollurimounish@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.7.1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
